Bug 46438 - xtensa-elf --enable-werror-always build fails
Summary: xtensa-elf --enable-werror-always build fails
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords: build
Depends on:
Blocks: enable-werror-always 44433
  Show dependency treegraph
 
Reported: 2010-11-11 13:26 UTC by Jorn Wolfgang Rennecke
Modified: 2010-11-12 20:11 UTC (History)
0 users

See Also:
Host:
Target: xtensa-elf
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jorn Wolfgang Rennecke 2010-11-11 13:26:04 UTC
../../../gcc/gcc/config/xtensa/xtensa.c: In function ‘xtensa_expand_nonlocal_goto’:
../../../gcc/gcc/config/xtensa/xtensa.c:1310:8: error: enum conversion when passing argument 2 of ‘emit_library_call’ is invalid in C++ [-Werror=c++-compat]
../../../gcc/gcc/rtl.h:2480:13: note: expected ‘enum libcall_type’ but argument is of type ‘int’
../../../gcc/gcc/config/xtensa/xtensa.c: In function ‘xtensa_setup_frame_addresses’:
../../../gcc/gcc/config/xtensa/xtensa.c:1586:6: error: enum conversion when passing argument 2 of ‘emit_library_call’ is invalid in C++ [-Werror=c++-compat]
../../../gcc/gcc/rtl.h:2480:13: note: expected ‘enum libcall_type’ but argument is of type ‘int’
../../../gcc/gcc/config/xtensa/xtensa.c: In function ‘xtensa_function_arg_1’:
../../../gcc/gcc/config/xtensa/xtensa.c:2053:13: error: assignment discards ‘const’ qualifier from pointer target type [-Werror]
../../../gcc/gcc/config/xtensa/xtensa.c: In function ‘xtensa_expand_prologue’:
../../../gcc/gcc/config/xtensa/xtensa.c:2640:3: error: enum conversion when passing argument 2 of ‘gen_rtx_fmt_ee_stat’ is invalid in C++ [-Werror=c++-compat]
./genrtl.h:24:1: note: expected ‘enum machine_mode’ but argument is of type ‘int’
../../../gcc/gcc/config/xtensa/xtensa.c: In function ‘xtensa_trampoline_init’:
../../../gcc/gcc/config/xtensa/xtensa.c:3593:8: error: enum conversion when passing argument 2 of ‘emit_library_call’ is invalid in C++ [-Werror=c++-compat]
../../../gcc/gcc/rtl.h:2480:13: note: expected ‘enum libcall_type’ but argument is of type ‘int’
Comment 1 Jorn Wolfgang Rennecke 2010-11-12 20:07:38 UTC
Author: amylaar
Date: Fri Nov 12 20:07:34 2010
New Revision: 166672

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=166672
Log:
	PR target/46438
	* config/xtensa/xtensa.c (xtensa_expand_nonlocal_goto): Use LCT_NORMAL.
	(xtensa_setup_frame_addresses, xtensa_trampoline_init): Likewise.
	(xtensa_function_arg_1): De-constify cum.
	(xtensa_expand_prologue): Use add_reg_note.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/xtensa/xtensa.c
Comment 2 Jorn Wolfgang Rennecke 2010-11-12 20:11:27 UTC
Patch has been applied to trunk.