	PR target/46438 	* config/xtensa/xtensa.c (xtensa_expand_nonlocal_goto): Use LCT_NORMAL. 	(xtensa_setup_frame_addresses, xtensa_trampoline_init): Likewise. 	(xtensa_function_arg_1): De-constify cum. 	(xtensa_expand_prologue): Use add_reg_note.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@166672 138bc75d-0d04-0410-961f-82ee72b054a4